--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,30 @@ version: '3.3'
 services:
   web:
     build: .
-    command: python manage.py run -h 0.0.0.0
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py run -h 0.0.0.0'
     volumes:
       - .:/app
     expose:
       - 5000
     environment:
       - FLASK_APP=odk_fieldmap/__init__.py
-      - FLASK_ENV=development
+      - FLASK_ENV=${FLASK_ENV}
+      - WEB_DOMAIN=${WEB_DOMAIN}
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.flask.rule=Host(`flask.localhost`)"
+      - "traefik.http.routers.flask.rule=Host(`${WEB_DOMAIN}`)"
+    depends_on:
+      - db
+
+  db:
+    image: postgres:14-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
 
   # alternative webproxy to nginx
   traefik:
@@ -24,3 +37,6 @@ services:
     volumes:
       - "./traefik/traefik.dev.toml:/etc/traefik/traefik.toml"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+
+volumes:
+  postgres_data:
