update docker compose for prod

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,9 @@ services:
       - 5000
     environment:
       - FLASK_APP=odk_fieldmap/__init__.py
+      - FLASK_ENV=${FLASK_ENV}
+      - WEB_DOMAIN=${WEB_DOMAIN}
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.flask.rule=Host(`${WEB_DOMAIN}`)"
