--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; gunicorn --bind 0.0.0.0:5000 manage:app'
     restart: always
     volumes:
-      - .:/app
+      - .:/home/app/web
     expose:
       - 5000
     environment:
